fix tap to play label issue on ios

--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@ body {
 }
 
 #tap_to_play_label {
-  opacity: 0;
+  opacity: 1;
 
   margin-top: 15;
   font-size: 2.5rem;
